force-app/main/default/objects/Bonus_Table__c.object
<CustomObject>
    <fields>
        <fullName>Academic_Year__c</fullName>
        <defaultValue>&quot;YYYY/YY&quot;</defaultValue>
        <label>Academic Year</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bonus_Payable_by__c</fullName>
        <label>Bonus Payable by</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Bursaries__c</fullName>
        <label>Bursaries</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Included in Bonus Calculation</fullName>
                    <default>true</default>
                    <label>Not Included in Bonus Calculation</label>
                </value>
                <value>
                    <fullName>Included in Bonus Calculation</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Confirmed_Student_Numbers__c</fullName>
        <label>Confirmed Student Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Copy_Criteria_Date__c</fullName>
        <formula>TEXT(DAY(  Student_Numbers_as_of__c )) + &quot;/&quot; + 
IF(MONTH( Student_Numbers_as_of__c)&gt;9,&quot;&quot;,&quot;0&quot;)+ 
TEXT(MONTH( Student_Numbers_as_of__c )) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(Student_Numbers_as_of__c)),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Criteria Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Copy_Pay_Date__c</fullName>
        <formula>TEXT(DAY(   Bonus_Payable_by__c  )) + &quot;/&quot; + 

IF(MONTH( Bonus_Payable_by__c )&gt;9,&quot;&quot;,&quot;0&quot;)+
TEXT(MONTH( Bonus_Payable_by__c )) + &quot;/&quot; + 
RIGHT(TEXT(YEAR(Bonus_Payable_by__c )),4)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy Pay Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Resulting_Multiplier_Copy__c</fullName>
        <description>Field is used in the workflow as a work around for hitting a 5000 character limit in a formula</description>
        <label>Resulting Multiplier Copy</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Resulting_Multiplier_New__c</fullName>
        <formula>IF(
   AND(NOT(ISBLANK(X200__c)),
       Confirmed_Student_Numbers__c &gt;= X200__c),         
2.0,
IF(
   AND(NOT(ISBLANK(X190__c)),
       Confirmed_Student_Numbers__c &gt;= X190__c),        
1.9,
IF(
   AND(NOT(ISBLANK(X180__c)),
       Confirmed_Student_Numbers__c &gt;= X180__c),       
1.8,
IF(
   AND(NOT(ISBLANK(X170__c)),
       Confirmed_Student_Numbers__c &gt;= X170__c),        
1.7,
IF(
   AND(NOT(ISBLANK(X160__c)),
       Confirmed_Student_Numbers__c &gt;= X160__c),        
1.6,
IF(
   AND(NOT(ISBLANK(X150__c)),
       Confirmed_Student_Numbers__c &gt;= X150__c),       
1.5,
IF(
   AND(NOT(ISBLANK(X140__c)),
       Confirmed_Student_Numbers__c &gt;= X140__c),        
1.4,
IF(
   AND(NOT(ISBLANK(X130__c)),
       Confirmed_Student_Numbers__c &gt;= X130__c),       
1.3,
IF(
   AND(NOT(ISBLANK(X120__c)),
       Confirmed_Student_Numbers__c &gt;= X120__c),         
1.2,
IF(
   AND(NOT(ISBLANK(X110__c)),
       Confirmed_Student_Numbers__c &gt;= X110__c),         
1.1,
IF(
   AND(NOT(ISBLANK(X100__c)),
       Confirmed_Student_Numbers__c &gt;= X100__c),         
1.0,
IF(
   AND(NOT(ISBLANK(X90__c)),
       Confirmed_Student_Numbers__c &gt;= X90__c),         
0.9,
IF(
   AND(NOT(ISBLANK(X80__c)),
       Confirmed_Student_Numbers__c &gt;= X80__c),         
0.8,
IF(
   AND(NOT(ISBLANK(X70__c)),
       Confirmed_Student_Numbers__c &gt;= X70__c),         
0.7,
IF(
   AND(NOT(ISBLANK(X60__c)),
       Confirmed_Student_Numbers__c &gt;= X60__c),         
0.6,
IF(
   AND(NOT(ISBLANK(X50__c)),
       Confirmed_Student_Numbers__c &gt;= X50__c),         
0.5,
IF(
   AND(NOT(ISBLANK(X40__c)),
       Confirmed_Student_Numbers__c &gt;= X40__c),         
0.4,
IF(
   AND(NOT(ISBLANK(X30__c)),
       Confirmed_Student_Numbers__c &gt;= X30__c),         
0.3,
IF(
   AND(NOT(ISBLANK(X20__c)),
       Confirmed_Student_Numbers__c &gt;= X20__c),         
0.2,
IF(
   AND(NOT(ISBLANK(X10__c)),
       Confirmed_Student_Numbers__c &gt;= X10__c),         
0.1,0))))))))))))))))))))</formula>
        <label>Resulting Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Resulting_Multiplier__c</fullName>
        <formula>IF(Confirmed_Student_Numbers__c =0,0,
IF(Confirmed_Student_Numbers__c &gt;= X200__c,2.0,
IF(Confirmed_Student_Numbers__c &gt;= X190__c,1.9,
IF(Confirmed_Student_Numbers__c &gt;= X180__c,1.8,
IF(Confirmed_Student_Numbers__c &gt;= X170__c,1.7,
IF(Confirmed_Student_Numbers__c &gt;= X160__c,1.6,
IF(Confirmed_Student_Numbers__c &gt;= X150__c,1.5,
IF(Confirmed_Student_Numbers__c &gt;= X140__c,1.4,
IF(Confirmed_Student_Numbers__c &gt;= X130__c,1.3,
IF(Confirmed_Student_Numbers__c &gt;= X120__c,1.2,
IF(Confirmed_Student_Numbers__c &gt;= X110__c,1.1,
IF(Confirmed_Student_Numbers__c &gt;= X100__c,1.0,
IF(Confirmed_Student_Numbers__c &gt;= X90__c,0.9,
IF(Confirmed_Student_Numbers__c &gt;= X80__c,0.8,
IF(Confirmed_Student_Numbers__c &gt;= X70__c,0.7,
IF(Confirmed_Student_Numbers__c &gt;= X60__c,0.6,
IF(Confirmed_Student_Numbers__c &gt;= X50__c,0.5,
IF(Confirmed_Student_Numbers__c &gt;= X40__c,0.4,
IF(Confirmed_Student_Numbers__c &gt;= X30__c,0.3,
IF(Confirmed_Student_Numbers__c &gt;= X20__c,0.2,
IF(Confirmed_Student_Numbers__c &gt;= X10__c,0.1,0)))))))))))))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resulting Multiplier</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>School_Section__c</fullName>
        <label>School Section</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Whole School</fullName>
                    <default>true</default>
                    <label>Whole School</label>
                </value>
                <value>
                    <fullName>Specific Year Groups</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>TEXT(Owner:User.School__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Special_Criteria_or_Conditions__c</fullName>
        <label>Special Criteria or Conditions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Specify_Year_Groups__c</fullName>
        <label>Specify Year Groups</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Student_Numbers_as_of__c</fullName>
        <label>Student Numbers as of</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Text_Column_more110__c</fullName>
        <formula>IF(X110__c= 0,&quot;&quot;,&quot;110%&quot; &amp;BR()) &amp;IF(X120__c = 0,&quot;&quot;,&quot;120%&quot; &amp;BR()) &amp;IF(X130__c= 0,&quot;&quot;,&quot;130%&quot; &amp;BR()) &amp;IF(X140__c= 0,&quot;&quot;,&quot;140%&quot; &amp;BR()) &amp;IF(X150__c= 0,&quot;&quot;,&quot;150%&quot; &amp;BR()) &amp;IF( X160__c = 0,&quot;&quot;,&quot;160%&quot; &amp;BR()) &amp;IF(X170__c = 0,&quot;&quot;,&quot;170%&quot; &amp;BR()) &amp;IF(X180__c = 0,&quot;&quot;,&quot;180%&quot; &amp;BR()) &amp;IF(  X190__c = 0,&quot;&quot;,&quot;190%&quot; &amp;BR()) &amp;IF(X200__c= 0,&quot;&quot;,&quot;200%&quot; &amp;BR())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text % Column &gt;110%</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Student_Num_Column_110__c</fullName>
        <formula>IF( X110__c =0,&quot;&quot;,&quot;=&gt;&quot;&amp;TEXT( X110__c) &amp;BR()) &amp;IF( X120__c =0,&quot;&quot;,&quot;=&gt;&quot;&amp;TEXT( X120__c) &amp;BR()) &amp;IF( X130__c =0,&quot;&quot;,&quot;=&gt;&quot;&amp;TEXT( X130__c) &amp;BR()) &amp;IF( X140__c =0,&quot;&quot;,&quot;=&gt;&quot;&amp;TEXT( X140__c) &amp;BR()) &amp;IF( X150__c =0,&quot;&quot;,&quot;=&gt;&quot;&amp;TEXT( X150__c)&amp;BR()) &amp;IF( X160__c =0,&quot;&quot;,&quot;=&gt;&quot;&amp;TEXT( X160__c) &amp;BR()) &amp;IF( X170__c =0,&quot;&quot;,&quot;=&gt;&quot;&amp;TEXT( X170__c) &amp;BR()) &amp;IF( X180__c =0,&quot;&quot;,&quot;=&gt;&quot;&amp;TEXT( X180__c) &amp;BR()) &amp;IF( X190__c =0,&quot;&quot;,&quot;=&gt;&quot;&amp;TEXT( X190__c) &amp;BR()) &amp;IF( X200__c =0,&quot;&quot;,&quot;=&gt;&quot;&amp;TEXT( X200__c)&amp;BR())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text Student Num Column &gt;110</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_Student_Num_Column__c</fullName>
        <formula>IF( X1000__c =0,&quot;&quot;,&quot;Less Than &quot;&amp; TEXT(X1000__c)&amp;BR()) &amp; IF( X10__c =0,&quot;&quot;,&quot;=&gt;&quot;&amp;TEXT( X10__c)&amp;BR()) &amp;IF( X20__c =0,&quot;&quot;,&quot;=&gt;&quot;&amp;TEXT( X20__c)&amp;BR()) &amp;IF( X30__c =0,&quot;&quot;,&quot;=&gt;&quot;&amp;TEXT( X30__c) &amp;BR()) &amp;IF( X40__c =0,&quot;&quot;,&quot;=&gt;&quot;&amp;TEXT( X40__c) &amp;BR()) &amp;IF( X50__c =0,&quot;&quot;,&quot;=&gt;&quot;&amp;TEXT( X50__c) &amp;BR()) &amp;IF( X60__c =0,&quot;&quot;,&quot;=&gt;&quot;&amp;TEXT( X60__c) &amp;BR()) &amp;IF( X70__c =0,&quot;&quot;,&quot;=&gt;&quot;&amp;TEXT( X70__c)&amp;BR()) &amp;IF( X80__c =0,&quot;&quot;,&quot;=&gt;&quot;&amp;TEXT( X80__c) &amp;BR()) &amp;IF( X90__c =0,&quot;&quot;,&quot;=&gt;&quot;&amp;TEXT( X90__c) &amp;BR()) &amp;IF( X100__c =0,&quot;&quot;,&quot;=&gt;&quot;&amp;TEXT( X100__c)&amp;BR())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text Student Num Column</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Text_percentage_Column_less110__c</fullName>
        <formula>IF(X1000__c= 0,&quot;&quot;,&quot;0%&quot; &amp;BR()) &amp; IF(X10__c = 0,&quot;&quot;,&quot;10%&quot; &amp;BR()) &amp;IF(X20__c = 0,&quot;&quot;,&quot;20%&quot; &amp;BR()) &amp;IF(X30__c = 0,&quot;&quot;,&quot;30%&quot; &amp;BR()) &amp;IF( X40__c = 0,&quot;&quot;,&quot;40%&quot; &amp;BR()) &amp;IF( X50__c = 0,&quot;&quot;,&quot;50%&quot; &amp;BR()) &amp;IF(X60__c = 0,&quot;&quot;,&quot;60%&quot; &amp;BR()) &amp;IF(X70__c = 0,&quot;&quot;,&quot;70%&quot; &amp;BR()) &amp;IF(X80__c = 0,&quot;&quot;,&quot;80%&quot; &amp;BR()) &amp;IF(X90__c = 0,&quot;&quot;,&quot;90%&quot; &amp;BR()) &amp;IF( X100__c = 0,&quot;&quot;,&quot;100%&quot; &amp;BR())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Text % Column &lt;110%</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <label>Version</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>X0_Text__c</fullName>
        <formula>IF( X1000__c =0,&quot;&quot;, &quot;&lt;&quot;&amp;TEXT( X1000__c) &amp;BR())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>0% Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X1000__c</fullName>
        <label>0% &lt;</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X100__c</fullName>
        <label>100% =&gt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X10__c</fullName>
        <label>10% =&gt;</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Bonus Table</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Resulting_Multiplier_New__c</columns>
        <columns>Confirmed_Student_Numbers__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Bonus Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bonus Tables</pluralLabel>
    <recordTypes>
        <fullName>Bonus_Table</fullName>
        <active>true</active>
        <label>Bonus Table</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Checks_if_Year_Groups_v_School_Section</fullName>
        <active>true</active>
        <description>Checks if Year Groups are inserted when the criteria is &quot;Whole School&quot;</description>
        <errorConditionFormula>AND( TEXT(School_Section__c )=&quot;Whole School&quot;, Specify_Year_Groups__c &lt;&gt;&quot;&quot;)</errorConditionFormula>
        <errorDisplayField>Specify_Year_Groups__c</errorDisplayField>
        <errorMessage>You cannot specify Year Groups, if the School Section selection is &quot;Whole School&quot;</errorMessage>
    </validationRules>
</CustomObject>